# openpod

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/scripts/: artemis_runner.py
.github/workflows/: artemis.yml  ci.yml  publish.yml
docs/: index.html
src/openpod/: __init__.py  __main__.py  agent.py  auth.py  channels.py  core.py  mcp_server.py  memory.py  models.py  rooms.claw  router.py  skills.py  streamer.py
tests/: test_router.py
